<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="210dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_set"
                android:layout_marginStart="25dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/burgerchoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_burgerset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:focusable="true"
                android:background="@drawable/btn_white_r_sq">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/img_here"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:contentDescription="@null"
                        android:src="@drawable/icon_maclunch" />

                    <TextView
                        android:id="@+id/txt_happysnack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/img_here"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/choose_set"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_burgersingle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:focusable="true"
                android:background="@drawable/btn_white_r_sq">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/img_takeaway"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:contentDescription="@null"
                        android:src="@drawable/icon_burger" />

                    <TextView
                        android:id="@+id/txt_takeaway"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/img_takeaway"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/choose_single"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <Button
            android:id="@+id/btn_burgerchoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancle"
            android:background="@drawable/btn_white_r_sq"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>