<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_menuDiv"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/vLayout_mainmenu"

        android:layout_marginStart="15dp"

        android:text="@string/divMenu"
        android:textColor="@color/black"
        android:textSize="30sp" />


    <LinearLayout
        android:id="@+id/vLayout_mainmenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="200dp">

        <LinearLayout
            android:id="@+id/hLayout_menumain1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/Card_maclunch"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardCornerRadius="20dp"
                android:layout_margin="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txt_maclunch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/img_maclunch"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/maclunch"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/img_maclunch"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:contentDescription="@null"
                        android:src="@drawable/icon_maclunch" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/Card_happysnack"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardCornerRadius="20dp"
                android:layout_margin="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txt_happysnack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/img_happysnack"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/happysnack"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/img_happysnack"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:contentDescription="@null"
                        android:src="@drawable/icon_side" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/hLayout_menumain2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <androidx.cardview.widget.CardView
                android:id="@+id/Card_dessertbeverage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardCornerRadius="20dp"
                android:layout_margin="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txt_dessertbeverage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/img_dessertbeverage"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/dessertcoffee"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/img_dessertbeverage"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:contentDescription="@null"
                        android:src="@drawable/icon_coffeedessert" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/Card_specialty"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardCornerRadius="20dp"
                android:layout_margin="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txt_speciality"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/img_specialty"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:contentDescription="@null"
                        android:text="@string/speciality"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/img_specialty"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:contentDescription="@null"
                        android:src="@drawable/icon_specialty" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
