<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--burgerchoice2.xml-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/bc2_logo"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="25dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/icon_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:layout_marginStart="15dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="7dp">

                <TextView
                    android:id="@+id/bh2_nameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="@string/set"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!--burgerchoice2.xml-->
        <LinearLayout
            android:id="@+id/burgerchoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_burgerset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:background="@drawable/btn_white_r_sq"
                android:focusable="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/img_burgerset"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:contentDescription="@null"
                        android:src="@drawable/icon_maclunch" />

                    <TextView
                        android:id="@+id/bc2_burgerset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/img_burgerset"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/Rset"
                        android:textColor="@color/black"
                        android:textSize="23sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/bc2_burgerset2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/img_burgerset"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="35dp"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_burgerlargeset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:background="@drawable/btn_white_r_sq"
                android:focusable="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/img_largeburgerset"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:contentDescription="@null"
                        android:src="@drawable/icon_maclunch" />

                    <TextView
                        android:id="@+id/bc2_largeburgerset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/img_largeburgerset"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/Lset"
                        android:textColor="@color/black"
                        android:textSize="23sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/bc2_largeburgerset2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/img_largeburgerset"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="35dp"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginTop="275dp">

            <Button
                android:id="@+id/btn_bc2_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_white_r_sq"
                android:text="@string/back"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_bc2_cancle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="25dp"
                android:layout_weight="1"
                android:background="@drawable/btn_white_r_sq"
                android:text="@string/cancle"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>